Change log for the UFTP standalone client
The issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues/


UFTP Client 1.4.2 (released mmm dd, 2021)
----------------------------------------
 - improvmenent: add configurable write buffer size for
   filesystem writes
 - fix: set file modification time (MFMT) used wrong
   time of day

UFTP Client 1.4.1 (released Apr 8, 2021)
----------------------------------------
 - fix: upload in "resume" mode (cp -R) fails when target file
   doesn't exist
 - fix: correctly handle server's multi-stream limit of "1"

UFTP Client 1.4.0 (released Mar 5, 2021)
----------------------------------------
 - new feature: "autheticate" command for only authenticating
   and printing connect info
 - update to log4j2
 - commands can be abbreviated, e.g. "i" for "info"
 - 'cp' command: byte range can now ba simplified to just a single
   number of bytes to transfer, e.g. "uftp cp -B 10G ..."
 - fix: debian package now depends on "default-jre-headless"

UFTP Client 1.3.2 (released Sep 18, 2020)
-----------------------------------------
 - new feature: support FTP proxies (DeleGate, Frox)
 - fix: check ~/.uftp before ~/.ssh for private keys

UFTP Client 1.3.1 (released Jul 21, 2020)
-----------------------------------------
 - fix: don't query password for password-less keys 
 - fix: SSH: make sure key specified by "--identity ..." is used
   when ssh-agent is present

UFTP Client 1.3.0 (released Jun 17, 2020)
 -----------------------------------------
 - SSH: support for ed25519 keys
 - SSH: improved ssh-agent support when multiple keys
   are available

UFTP Client 1.2.0 (released Apr 16, 2020)
-----------------------------------------
 - improved error messages and removed stack traces
 - fix: client can hang when multiple threads are
   used (#60)


UFTP Client 1.1.0 (released Feb 13, 2020)
-----------------------------------------
 - improved "share" command
   (thanks to Jens Henrik Goebbert for many suggestions)