@@ -5,8 +5,7 @@ import java.util.Set;
 
 import javax.ws.rs.core.Application;
 
-import de.fzj.unicore.wsrflite.Kernel;
-
+import eu.unicore.services.Kernel;
 import eu.unicore.services.rest.USERestApplication;
 import eu.unicore.uftp.authserver.exceptions.CustomExceptionMapper;
 import eu.unicore.uftp.authserver.messages.AuthResponseBodyProvider;
