@@ -15,12 +15,12 @@
   </parent>
 
   <properties>
-    <auth.version>2.4.0</auth.version>
+    <auth.version>2.4.1</auth.version>
     <core.version>2.11.0</core.version>
-    <seclib.version>5.2.0</seclib.version>
+    <seclib.version>5.3.1</seclib.version>
 
     <jsch.version>0.0.9</jsch.version>
-    <jnr.version>0.19</jnr.version>
+    <jnr.version>0.38.8</jnr.version>
 
     <docman.enabled/>
     <doc.src>src/main/doc/uftpclient-manual.txt</doc.src>
