@@ -14,7 +14,7 @@ container.client.serverHostnameChecking=NONE
 container.client.securitySessions=false
 
 container.security.accesscontrol=true
-container.security.accesscontrol.pdp=de.fzj.unicore.wsrflite.security.pdp.AcceptingPdp
+container.security.accesscontrol.pdp=eu.unicore.services.security.pdp.AcceptingPdp
 
 persistence.directory=./target/data
 persistence.directory.TEST=./target/test_shares
